--- a/2018/零基础学院/day05-06/css/style_1.css
+++ b/2018/零基础学院/day05-06/css/style_1.css
@@ -1,3 +1,18 @@
+.change-style {
+  margin: 20px auto;
+  width: 600px;
+  height: 60px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+button {
+  font-size: 18px;
+  height: 30px;
+  margin-right: 20px;
+  width: 120px;
+}
+
 b {
   margin-right: 10px;
 }
