--- a/2018/零基础学院/day05-06/css/style_3.css
+++ b/2018/零基础学院/day05-06/css/style_3.css
@@ -1,3 +1,18 @@
+.change-style {
+  margin: 20px auto;
+  width: 600px;
+  height: 60px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+button {
+  font-size: 18px;
+  height: 30px;
+  margin-right: 20px;
+  width: 120px;
+}
+
 .container {
   border: 1px solid #ccc;
   width: 90%;
@@ -27,6 +42,7 @@ h2 {
   float: left;
   margin: 0;
   font-size: 20px;
+  border-bottom: 1px solid #fff;
 }
 
 .content {
