--- a/2018/零基础学院/day12-15/styles/style.css
+++ b/2018/零基础学院/day12-15/styles/style.css
@@ -435,7 +435,7 @@ input[type='search']::-webkit-search-cancel-button {
 }
 
 .message-list::-webkit-scrollbar,
-.opened-messege-list::-webkit-scrollbar,
+.opened-chatlist-wrapper::-webkit-scrollbar,
 .menu-secondary > div::-webkit-scrollbar {
   display: none;
 }
@@ -522,14 +522,9 @@ input[type='search']::-webkit-search-cancel-button {
 
 .opened-chatlist-wrapper {
   flex: auto;
-
-  height: 100%;
-}
-
-.opened-messege-list {
   overflow-y: auto;
 
-  height: calc(100% - 70px);
+  height: 100%;
 }
 
 .toolbar {
